<resources>
    <string name="app_name">INTI</string>
    <string name="welcome_to_inti_expense">Welcome to Inti Expense</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="forgot_your_password_nu">Forgot your password?</string>
    <string name="enter_your_email_id">Enter your Email Id?</string>
    <string name="recover_password">Recover Password</string>
    <string name="inti_expense">Inti Expense</string>
    <string name="approved">Approved</string>
    <string name="in_approval">In Approval</string>
    <string name="rejected">Rejected</string>
    <string name="paidout">Paid Out</string>
    <string name="my_expense_reports">Report</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="amount">Amount</string>
    <string name="status">Status : </string>
    <string name="report">Report</string>
    <string name="description">Description </string>
    <string name="dummystring">A quick brown fox jump over an lazy rabbit</string>
    <string name="date_from">Date from :</string>
    <string name="date_to">Date To :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="summary_by_categories">Summary by Categories</string>
    <string name="list_expenses">List Expenses</string>
    <string name="policy">Policy : </string>
    <string name="text_image">Add Expense</string>
    <string name="barcode">Barcode</string>
    <string name="add">Add</string>
    <string name="date">Date *</string>
    <string name="currency">Currency *</string>
    <string name="category">Category *</string>
    <string name="list">List</string>
    <string name="originalamount">Original Amount *</string>
    <string name="exchangerate">Exchange Rate *</string>
    <string name="enter_amount_here">Enter amount here </string>
    <string name="enter_exchange_rate">Exchange Rate</string>
    <string name="enter_original_amount">Enter Original Amount</string>
    <string name="ruc">RUC</string>
    <string name="enter_ruc_here">Enter RUC here</string>
    <string name="provider">Provider :</string>
    <string name="enter_provider_here">Enter Provider here</string>
    <string name="cost_center">Cost Center *</string>
    <string name="doc_type">Document Type *</string>
    <string name="series">Series *</string>
    <string name="enter_series_rate">Enter Series here</string>
    <string name="number_of_doc">Number Of Doc *</string>
    <string name="enter_no_of_doc">Enter Number of Doc</string>
    <string name="draft">Project *</string>
    <string name="tax_rate">Tax Rate *</string>
    <string name="enter_taxrate_here">Enter Tax Rate here</string>
    <string name="igv">IGV</string>
    <string name="enter_igv_here">Enter IGV here</string>
    <string name="billable">Billable</string>
    <string name="fill_in_form">Fill in Form</string>
    <string name="name">Name</string>
    <string name="enter_name_here">Enter Name here</string>
    <string name="calcel">Cancel</string>
    <string name="save">Save</string>
    <string name="create_expense">Create Expense</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="sync">Synchronize</string>
    <string name="request_approval">Request Approval</string>
    <string name="delete">Delete</string>
    <string name="view_history">View History</string>
    <string name="expense_report_history">Expense Report History</string>
    <string name="view_detail">View Detail</string>
    <string name="approve">Approved</string>
    <string name="reject">Reject</string>
    <string name="assigned_report">Assigned Report</string>
    <string name="converted_amount">Converted Amount *</string>
    <string name="enter_converted_amount">Enter converted amount</string>
    <string name="currency_not_found">Currency not found</string>
    <string name="otherprovider">New Supplier</string>
    <string name="cancel">Cancel</string>
    <string name="enter_providor">Enter Provider</string>
    <string name="choose_option">Choose Option</string>
    <string name="take_picture">Take Picture</string>
    <string name="pick_from_galary">Pick from gallery</string>
    <string name="choose_country_of_currency">Choose Country of Currency:</string>
    <string name="webservice_api_url">https://netforce.biz/</string>
    <string name="dateformat">YYYY/MM/DD</string>
    <string name="reportdetails">Fill the report details here... </string>
    <string name="firsttitle">INTI</string>
    <string name="categorytext">Category Name</string>
    <string name="enter_costcenter">Enter Cost Center</string>
    <string name="nointernetconnection">No Internet Connection</string>
    <string name="pleasewait">Please wait.</string>
    <string name="editreport">Edit Report</string>
    <string name="editExpenses">Edit Expenses</string>
    <string name="userName">Tenzin Choephel</string>
    <string name="designation">Android Developer</string>
    <string name="address">Noida Sector 7 B3</string>
    <string name="barline">|</string>
    <string name="Description">Description *</string>
    <string name="supplier">Supplier *</string>
    <string name="supplieridentifier">Supplier Indetifier</string>
    <string name="supplierName">Supplier Name</string>
    <string name="project">Project *</string>
    <string name="Project">project</string>
    <string name="TaxAmount">Tax Amount</string>
    <string name="TaxtAmountEditText">tax amount</string>
    <string name="invalidEmail">Invalid Email.</string>
    <string name="errorPass">Incorrect Password</string>
    <string name="select_document_type">select document type</string>
    <string name="slect_cost_center">select cost center</string>
    <string name="selectProject">Select Project</string>
    <string name="taxratehint">Select the Tax</string>
    <string name="ernamedummy">Dummy Title</string>
    <string name="editExpenselist">Edit ExpenseList</string>
    <string name="elDetails">Expense Detail</string>
    <string name="thereisnodata">There is no data for the existing user</string>
    <string name="serverError">There is some server error.</string>
    <string name="dataloading">Data is loading..</string>
    <string name="filterApproved">Approved</string>
    <string name="filterRejected">Rejected</string>
    <string name="filterPaidOut">Paid Out</string>
    <string name="filterInApproval">Inapproval</string>
    <string name="baseUrl">http://161.202.19.38/inti_expense/api/api.php?type=</string>
    <string name="inCorrectEmail">Incorrect Email</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="pendingreport">Pending Report</string>
    <string name="nouserexist">Either User not exist or Customer</string>
    <string name="offlineReport">In Progress</string>
    <string name="clickagaintoexit">Please click back press again to exit</string>
    <string name="newSupplierText">New Supplier</string>
    <string name="enter_new_supplier_name">Enter New Supplier Name</string>
    <string name="tryAgain">Try again,there is some Error..</string>
    <string name="hotel">Hotel</string>
    <string name="catmeal">Meal</string>
    <string name="cattransport">Transport</string>
    <string name="cathotel">Hotel</string>
    <string name="unabletoupdatetheExpense">Unable to update the expense</string>
    <string name="successfulyupdated">Successfully updated the expense</string>
    <string name="youcantEditorDelete">You can\'t delete Aprroved Report</string>
    <string name="youcantSyn">There is no need to Syn.</string>
    <string name="youcantrequestforApproval">You can\'t send approval request</string>
    <string name="youcantEdit">You can\'t edit the Approved Report</string>
    <string name="eldate">Date</string>
    <string name="elcurrency">Currency</string>
    <string name="elcategory">Category</string>
</resources>
