<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.netforceinfotech.inti.addexpenses.CreateExpenseActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <include
        android:id="@+id/emailbar"
        layout="@layout/email_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_in_form"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="12sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundrect_accentwhite"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/enter_name_here"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundrect_accentwhite"
                    android:padding="8dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/enter_amount_here"
                        android:lines="5"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_from"
                    android:textSize="12sp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rippleDateFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundrect_accentwhite"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="dd/mm//yyyy"
                            android:textSize="10sp" />

                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_to"
                    android:textSize="12sp" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rippleDateTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrl_rippleOverlay="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundrect_accentwhite"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:hint="dd/mm/yyyy"
                            android:textSize="10sp" />

                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
                <LinearLayout
                    android:weightSum="100"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/buttonCancel"
                            android:textColor="@color/white"
                            android:text="@string/calcel"
                            android:background="@drawable/roundrect_grey"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/buttonSave"
                            android:textColor="@color/white"
                            android:text="@string/save"
                            android:background="@drawable/roundrect_accentcolor"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
